tests/cmp/record-pat-multiple-dotdot.golden
Parse Error:
tests/cmp/record-pat-multiple-dotdot.trp:3:15 unexpected token TokenComma
